# datasets

./: .gitignore  pyproject.toml
sentence/: README.md  legacy.ipynb  play.ipynb
sentence-v2/: main.py
sign/: README.md  clean.py  convert_normalize.py  play.ipynb  preprocess.py  preprocess_video.py
sign/signasl/: download.py
sign/wlasl/: download.py  find_missing.py  preprocess.py
